--- a/README
+++ b/README
@@ -10,7 +10,7 @@ Features
 
 UML
 
-![Main engine structure and relationship](https://raw.github.com/formigone/rokkojs/master/doc/rokkojs-uml.svg)
+![Main engine structure and relationship](https://raw.github.com/formigone/rokkojs/master/doc/rokkojs-uml.png)
 
 
  Copyright 2012 Rodrigo Silveira. All rights reserved.
